--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,17 @@
-node_modules
+node_modules/
+dist/
+build/
+.env
+.env.local
+.env.*.local
+*.log
 .DS_Store
+Thumbs.db
+.vscode/
+.idea/
+*.swp
+*.swo
+!index.html
+!assets/
+!css/
+!js/
