--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "geogemsl",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://sidhangeo.github.io/geogemsl/",
   "main": "public/index.js",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
@@ -22,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -44,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
