--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "scripts": {
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "REACT_APP_REPO_NAME=geogemsl react-scripts start",
+    "build": "REACT_APP_REPO_NAME=geogemsl react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
